<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RatecfgActivity"
    android:usesCleartextTraffic="true">

    <EditText
        android:id="@+id/dollar_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="@string/btn_dollar_label"
        android:inputType="numberDecimal"
        android:text="@string/btn_dollar_label" />

    <EditText
        android:id="@+id/euro_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="@string/btn_euro_label"
        android:inputType="numberDecimal"
        android:text="@string/btn_euro_label" />

    <EditText
        android:id="@+id/won_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="@string/btn_won_label"
        android:inputType="numberDecimal"
        android:text="@string/btn_won_label" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/btn_save_label" />
</LinearLayout>