<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/team2_name"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:text="@string/team1_label"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/score2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="48dp"
            android:gravity="center"
            android:text="0"
            android:textSize="55sp" />

        <Button
            android:id="@+id/btn3a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:onClick="btn3a"
            android:text="@string/btn3_label" />

        <Button
            android:id="@+id/btn2a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:onClick="btn2a"
            android:text="@string/btn2_label" />

        <Button
            android:id="@+id/btn1a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:onClick="btn1a"
            android:text="@string/btn1_label" />
    </LinearLayout>
    
    <TextView
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/team1_name"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:text="@string/team2_label"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/score1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="48dp"
            android:gravity="center"
            android:text="0"
            android:textSize="55sp" />

        <Button
            android:id="@+id/btn3b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:onClick="btn3b"
            android:text="@string/btn3_label" />

        <Button
            android:id="@+id/btn2b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:onClick="btn2b"
            android:text="@string/btn2_label" />

        <Button
            android:id="@+id/btn1b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:onClick="btn1b"
            android:text="@string/btn1_label" />
    </LinearLayout>
</LinearLayout>


    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:onClick="btnReset"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/btn_reset_label" />

</RelativeLayout>